// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders fragment with existing description 1`] = `
"## docs:scripts

-   Project: \`node-scripts-docs\`
-   Source:

    \`\`\`shell
    npm exec -- nsd-debug --include-locals
    \`\`\`

-   Description:

    Build the latest sources and then use the build output to execute your command. Parameters are passed through by \`npm exec\`.
"
`;

exports[`renders fragment without description 1`] = `
"## docs:scripts

-   Project: \`node-scripts-docs\`
-   Source:

    \`\`\`shell
    npm exec -- nsd-debug --include-locals
    \`\`\`

-   Description:

    _documentation pending_
"
`;
